--- a/index.html
+++ b/index.html
@@ -471,93 +471,51 @@ header { padding:10px 16px; border-bottom:2px solid #f33; }
         </div>
       </div>
     </section>
-    <section class="center" id="simulationTab" style="flex:1; display:none; flex-direction:column; align-items:center; justify-content:flex-start; min-height:0; padding:20px; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0f0f0f 100%);">
-      <!-- Simulation Header -->
-      <div style="text-align:center; margin-bottom:32px;">
-        <h1 style="color:#0f3; font-size:36px; margin:0; text-shadow:0 0 20px rgba(0,255,51,0.3); font-weight:700;"><img src="assets/attack.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> BATTLE SIMULATION <img src="assets/attack.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"></h1>
-        <p style="color:#0a8; font-size:18px; margin:12px 0 0 0; opacity:0.8;">Watch your loadouts clash in epic combat!</p>
-      </div>
+    <section class="center" id="simulationTab" style="flex:1; display:none; flex-direction:column; min-height:0; padding:20px; background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0f0f0f 100%);">
+      <!-- Battle Arena: Three-column layout -->
+      <div style="display: grid; grid-template-columns: 1fr 2fr 1fr; gap: 24px; width: 100%; flex: 1; min-height: 0;">
 
-      <!-- Battle Arena Visualization -->
-      <div style="width:100%; max-width:800px; margin-bottom:32px; background:linear-gradient(45deg, #001100 0%, #003300 50%, #001100 100%); border:3px solid #0f3; border-radius:20px; padding:24px; box-shadow:0 0 40px rgba(0,255,51,0.2);">
-        <div style="display:grid; grid-template-columns:1fr auto 1fr; gap:32px; align-items:center;">
-          <!-- Player 1 Preview -->
-          <div style="text-align:center;">
-            <div style="color:#0f3; font-size:24px; font-weight:700; margin-bottom:16px; text-shadow:0 0 10px rgba(0,255,51,0.5);"><img src="assets/armor.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> PLAYER</div>
-            <div id="simPlayerPreview" style="background:rgba(0,255,51,0.1); border:2px solid #0f3; border-radius:12px; padding:16px; min-height:120px;">
-              <div style="display:flex; align-items:center; gap:12px; margin-bottom:12px;">
-                <img id="simPlayerWeapon" src="assets/placeholder.png" style="width:48px; height:48px; image-rendering:pixelated; border:2px solid #0f3; border-radius:8px; background:#001100;">
-                <div style="text-align:left;">
-                  <div id="simPlayerWeaponName" style="color:#0f3; font-weight:700; font-size:16px;">No Weapon</div>
-                  <div id="simPlayerStats" style="color:#0a8; font-size:14px;">HP: 10 | ATK: 0 | ARM: 0 | SPD: 0</div>
-                </div>
-              </div>
-              <div id="simPlayerItems" style="display:flex; flex-wrap:wrap; gap:4px; justify-content:center;">
-                <span style="color:#666; font-style:italic;">No items equipped</span>
-              </div>
-            </div>
+        <!-- Player Arena (Left) -->
+        <div id="simPlayerArena" style="display: flex; flex-direction: column; gap: 16px; background: rgba(0,255,51,0.05); border: 2px solid #0f3; border-radius: 16px; padding: 16px;">
+          <h2 style="color:#0f3; text-align:center; margin:0 0 8px 0; text-shadow:0 0 10px rgba(0,255,51,0.5);">PLAYER</h2>
+          <div id="simPlayerPreview" style="display: flex; flex-direction: column; gap: 12px;">
+            <!-- Player content will be dynamically rendered here -->
           </div>
+        </div>
 
-
-          <!-- Player 2 Preview -->
-          <div style="text-align:center;">
-            <div style="color:#f33; font-size:24px; font-weight:700; margin-bottom:16px; text-shadow:0 0 10px rgba(255,51,51,0.5);"><img src="assets/attack.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> OPPONENT</div>
-            <div id="simOpponentPreview" style="background:rgba(255,51,51,0.1); border:2px solid #f33; border-radius:12px; padding:16px; min-height:120px;">
-              <div style="display:flex; align-items:center; gap:12px; margin-bottom:12px;">
-                <img id="simOpponentWeapon" src="assets/placeholder.png" style="width:48px; height:48px; image-rendering:pixelated; border:2px solid #f33; border-radius:8px; background:#110000;">
-                <div style="text-align:left;">
-                  <div id="simOpponentWeaponName" style="color:#f33; font-weight:700; font-size:16px;">No Weapon</div>
-                  <div id="simOpponentStats" style="color:#a05; font-size:14px;">HP: 10 | ATK: 0 | ARM: 0 | SPD: 0</div>
-                </div>
-              </div>
-              <div id="simOpponentItems" style="display:flex; flex-wrap:wrap; gap:4px; justify-content:center;">
-                <span style="color:#666; font-style:italic;">No items equipped</span>
+        <!-- Center Column (Log & Controls) -->
+        <div style="display: flex; flex-direction: column; gap: 24px; min-height: 0;">
+          <!-- Controls -->
+          <div id="simControls" style="display:flex; gap:16px; flex-wrap:wrap; align-items:center; justify-content:center; background:rgba(0,0,0,0.3); border:2px solid #333; border-radius:16px; padding:16px;">
+            <button id="btnSimulate" type="button" title="Run a simulation between the two loadouts" class="battle-button" style="background:linear-gradient(135deg, #0f3 0%, #0a8 100%); color:#000; border:none; border-radius:12px; padding:12px 24px; cursor:pointer; font-size:18px; font-weight:700; box-shadow:0 4px 15px rgba(0,255,51,0.3);">▶️ START BATTLE</button>
+            <button id="btnClearLog" type="button" title="Clear the simulation log" class="battle-button" style="background:linear-gradient(135deg, #666 0%, #444 100%); color:#fff; border:none; border-radius:12px; padding:12px 24px; cursor:pointer; font-size:18px; font-weight:700;">🧹 Clear Log</button>
+          </div>
+          <!-- Battle Log -->
+          <div style="flex: 1; display: flex; flex-direction: column; background:linear-gradient(135deg, #000 0%, #111 100%); border:3px solid #0f3; border-radius:20px; box-shadow:0 0 40px rgba(0,255,51,0.2); overflow:hidden; min-height: 0;">
+            <div style="background:linear-gradient(90deg, #0f3 0%, #0a8 100%); padding:12px 20px; border-bottom:2px solid #0f3;">
+              <div style="display:flex; align-items:center; justify-content:space-between;">
+                <h3 style="color:#000; font-size:20px; font-weight:700; margin:0;">📜 BATTLE LOG</h3>
+                <div id="battleStatus" style="color:#000; font-size:16px; font-weight:700;">Ready</div>
               </div>
             </div>
+            <div id="simLog" style="flex: 1; overflow:auto; padding:16px; font-size:16px; font-family:'Courier New', monospace; color:#0f3; line-height:1.6;">
+              <!-- Log content -->
+            </div>
+          </div>
+          <!-- Battle Summary (optional) -->
+          <div id="battleSummary" style="display:none; /* Summary styles from before */">
+             <!-- Summary content will be here -->
           </div>
         </div>
-      </div>
 
-      <!-- Controls Section -->
-      <div style="width:100%; max-width:600px; margin-bottom:24px;">
-        <div id="simControls" style="display:flex; gap:24px; flex-wrap:wrap; align-items:center; justify-content:center; background:rgba(0,0,0,0.3); border:2px solid #333; border-radius:16px; padding:20px;">
-          <button id="btnSimulate" type="button" title="Run a simulation between the two loadouts" class="battle-button" style="background:linear-gradient(135deg, #0f3 0%, #0a8 100%); color:#000; border:none; border-radius:12px; padding:16px 32px; cursor:pointer; font-size:20px; font-weight:700; box-shadow:0 4px 15px rgba(0,255,51,0.3); transition:all 0.3s ease; text-shadow:none;">▶️ START BATTLE</button>
-          <button id="btnClearLog" type="button" title="Clear the simulation log" class="battle-button" style="background:linear-gradient(135deg, #666 0%, #444 100%); color:#fff; border:none; border-radius:12px; padding:16px 32px; cursor:pointer; font-size:20px; font-weight:700; box-shadow:0 4px 15px rgba(0,0,0,0.3); transition:all 0.3s ease;">🧹 Clear Log</button>
+        <!-- Opponent Arena (Right) -->
+        <div id="simOpponentArena" style="display: flex; flex-direction: column; gap: 16px; background: rgba(255,51,51,0.05); border: 2px solid #f33; border-radius: 16px; padding: 16px;">
+          <h2 style="color:#f33; text-align:center; margin:0 0 8px 0; text-shadow:0 0 10px rgba(255,51,51,0.5);">OPPONENT</h2>
+          <div id="simOpponentPreview" style="display: flex; flex-direction: column; gap: 12px;">
+            <!-- Opponent content will be dynamically rendered here -->
+          </div>
         </div>
-      </div>
 
-      <!-- Battle Log Section -->
-      <div style="width:100%; max-width:900px; background:linear-gradient(135deg, #000 0%, #111 100%); border:3px solid #0f3; border-radius:20px; box-shadow:0 0 40px rgba(0,255,51,0.2); overflow:hidden;">
-        <!-- Log Header -->
-        <div style="background:linear-gradient(90deg, #0f3 0%, #0a8 100%); padding:16px 24px; border-bottom:2px solid #0f3;">
-          <div style="display:flex; align-items:center; justify-content:space-between;">
-            <h3 style="color:#000; font-size:24px; font-weight:700; margin:0;">📜 BATTLE LOG</h3>
-            <div id="battleStatus" style="color:#000; font-size:18px; font-weight:700;">Ready for Battle</div>
-          </div>
-        </div>
-        
-        <!-- Log Content -->
-        <div id="simLog" style="min-height:300px; max-height:500px; overflow:auto; padding:24px; font-size:18px; font-family:'Courier New', monospace; color:#0f3; line-height:1.6; background-image:repeating-linear-gradient(0deg, transparent, transparent 1.6em, rgba(0,255,51,0.05) 1.6em, rgba(0,255,51,0.05) 3.2em);">
-          <div style="text-align:center; color:#666; font-style:italic; font-size:20px; padding:60px 20px;">
-            <img src="assets/attack.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> Ready to witness epic battles!<br><br>
-            Configure your loadouts and hit <strong style="color:#0f3;">"START BATTLE"</strong> to begin the simulation.
-          </div>
-        </div>
-      </div>
-
-      <!-- Battle Results Summary (Hidden by default) -->
-      <div id="battleSummary" style="width:100%; max-width:900px; margin-top:24px; background:linear-gradient(135deg, #1a1a1a 0%, #2a2a2a 100%); border:3px solid #f93; border-radius:20px; padding:24px; display:none; box-shadow:0 0 40px rgba(255,153,51,0.2);">
-        <h3 style="color:#f93; font-size:24px; font-weight:700; text-align:center; margin:0 0 20px 0; text-shadow:0 0 10px rgba(255,153,51,0.5);"><img src="assets/health.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> BATTLE SUMMARY</h3>
-        <div id="summaryContent" style="display:grid; grid-template-columns:1fr 1fr; gap:24px; color:#fff; font-size:18px;">
-          <div id="playerSummary" style="background:rgba(0,255,51,0.1); border:2px solid #0f3; border-radius:12px; padding:20px;">
-            <h4 style="color:#0f3; margin:0 0 16px 0; font-size:20px;"><img src="assets/armor.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> Player Stats</h4>
-            <div id="playerSummaryContent" style="font-size:16px;"></div>
-          </div>
-          <div id="opponentSummary" style="background:rgba(255,51,51,0.1); border:2px solid #f33; border-radius:12px; padding:20px;">
-            <h4 style="color:#f33; margin:0 0 16px 0; font-size:20px;"><img src="assets/attack.png" style="width:16px; height:16px; vertical-align:middle; image-rendering:pixelated;"> Opponent Stats</h4>
-            <div id="opponentSummaryContent" style="font-size:16px;"></div>
-          </div>
-        </div>
       </div>
     </section>
   </div>
