Add weapon debug tools and enhance grid filtering logs
Added debug_main.html and weapon_test.html for browser-based debugging of weapon data, and debug_weapons.js for Node.js-based validation and inspection of weapon entries in details.json. Enhanced index.html with additional logging in renderGrid and filter listeners to aid in debugging filtering logic.

--- a/index.html
+++ b/index.html
@@ -908,6 +908,10 @@ function renderGrid() {
 
   grid.innerHTML = '';
   DATA_ARR.forEach(entry => {
+    // Debug: Check if we're filtering for weapons
+    if (bucketVal === 'weapons') {
+      console.log(`Checking ${entry.name}: bucket="${entry.bucket}", bucketVal="${bucketVal}", match:`, entry.bucket === bucketVal);
+    }
 
     if (bucketVal !== 'All' && entry.bucket !== bucketVal) return;
 
@@ -1109,11 +1113,15 @@ function renderGrid() {
     grid.appendChild(card);
 
   });
+  console.log('renderGrid finished, shown:', shown, 'bucketVal:', bucketVal);
   countSpan.textContent = `Shown: ${shown}`;
 }
 
 // Filter listeners
-[searchIn, bucketSel, catSel].forEach(el => el.addEventListener('input', renderGrid));
+[searchIn, bucketSel, catSel].forEach(el => el.addEventListener('input', () => {
+  console.log('Filter changed, DATA_ARR length:', DATA_ARR?.length);
+  renderGrid();
+}));
 
 // Drag and drop helpers
 function setupDrop(zoneSel, sideKey, type) {
